--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+
+/yarn-error.log
