--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": "true",
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.6",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   },
