--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ local:
 #   service: S3
 #   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
 #   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
+#   region: ap-northeast-1
+#   bucket: okogoto
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
